--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "electron": "~1.6.2"
   },
   "dependencies": {
+    "electron-json-storage": "^3.0.5",
     "electron-require": "^0.3.0"
   }
 }
